--- a/Physics_309_Honors.ipynb
+++ b/Physics_309_Honors.ipynb
@@ -280,7 +280,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Imagine a world where the speed of light is not 299,792,458 m/s but instead 10 m/s, comparable to walking. In this thought experiment, I will explore how such a drastic change affects what you see as you move. Light’s finite speed becomes noticeable, bending your field of view and shifting colors dramatically. This notebook walks you through the relativistic effects—aberration and Doppler shift—using visualizations that would appear if almost all speeds were a large fraction of light speed."
+        "Imagine a world where the speed of light is not 299,792,458 m/s but instead 10 m/s, comparable to walking. In this thought experiment, I will explore how such a drastic change affects what you see as you move."
       ],
       "metadata": {
         "id": "glTMb6c6cAZw"
